DevOps Storage/K8s/sample/1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: <project_name>
  name: <project_name>
  namespace: dev-<project>
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: <project_name>
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: <project_name>
    spec:
      containers:
      - image: <registry>/<project>/<project_name>:<image_tag>
        imagePullPolicy: IfNotPresent
        name: <project_name>
        ports:
        - containerPort: 3000
          name: <project_name>
          protocol: TCP
        resources:
          limits:
            cpu: 512m
            memory: 512Mi
          requests:
            cpu: 128m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: <secret registry>
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
