DevOps Storage/K8s/sample/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: <project_name>
  name: <project_name>
  namespace: dev-<project>
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: <project_name>
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: <project_name>
  sessionAffinity: None
  type: ClusterIP
